--- a/css/search.css
+++ b/css/search.css
@@ -3,11 +3,12 @@
     Search
 
  */
-
-.box {
-    cursor: default;
-    position: absolute;
-    padding: 8px 0;
+button {
+    border: none;
+    outline: none;
+    margin-left: 8px;
+    background-color: #fff;
+    margin-top: 3px;
 }
 
 .fa-search {
@@ -23,12 +24,9 @@
 }
 
 .container-3 input#search{
-    width: 0;
-    height: 50px;
+    width: 120px;
     border: none;
     font-size: 10pt;
-    float: left;
-    padding-left: 45px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -38,53 +36,23 @@
     -webkit-transition: .2s;
 }
 
-.container-3 .icon{
-    position: absolute;
-    top: 50%;
-    margin-left: 13px;
-    margin-top: 13px;
-    z-index: 1;
-    color: #000;
-
-    -webkit-transition: all .55s ease;
-    -moz-transition: all .55s ease;
-    -ms-transition: all .55s ease;
-    -o-transition: all .55s ease;
-    transition: all .55s ease;
-}
-
-.container-3 input#search:focus, .container-3 input#search:active{
-    outline:none;
-}
-
-.container-3:hover input#search, input#search:focus {
-    width: 150px;
-    color: #000;
-    transition: 1.2s;
-    -webkit-transition: 1.2s;
-}
-
-
-.container-3:hover .icon{
+.container-3:hover .icon {
     /*margin-top: 16px;*/
     color: #980267;
+}
 
-    /*-webkit-transform:scale(1.5); !* Safari and Chrome *!
-    -moz-transform:scale(1.5); !* Firefox *!
-    -ms-transform:scale(1.5); !* IE 9 *!
-    -o-transform:scale(1.5); !* Opera *!
-    transform:scale(1.5);*/
+
+
+.container-3 input#search:focus, .container-3 input#search:active{
+    outline: none;
+    border-bottom: 1px solid #980267;
 }
 
 .container-3 input#search::-webkit-input-placeholder {
     color: #000;
 }
 
-.container-3 input#search:-moz-placeholder { /* Firefox 18- */
-    color: #000;
-}
-
-.container-3 input#search::-moz-placeholder {  /* Firefox 19+ */
+.container-3 input#search::-moz-placeholder {
     color: #000;
 }
 
